--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.2.0",
+    "axios": "^1.6.8",
     "next": "^14.1.0",
     "react": "^18",
     "react-countup": "^6.5.0",
